# radisso

./: README.md
OIDC/: CLIENT-INTEGRATION.md  ENDPOINTS.md  FLOWS.md  ONBOARDING.md  SCOPES.md  SECURITY.md  WEBHOOKS.md
OIDC/SDKs/node/: README.md  index.d.ts  index.js  package.json
OIDC/SDKs/php/: README.md  composer.json
OIDC/SDKs/php/src/: RadissoOIDC.php  RadissoOIDCException.php
OIDC/SDKs/python/: README.md  pyproject.toml
OIDC/SDKs/python/radisso_oidc/: __init__.py  client.py
Wrapper/: api.php  demo-user.json  radisso.php  radissotest.php  readme.md
Wrapper/classes/Radisso/: Client.php  Wrapper.php
