[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "radisso-oidc"
version = "1.0.0"
description = "RadiSSO OIDC Python Client – Authorization Code (PKCE), Client Credentials, Device Code, Token Management"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest"]
